resources/css/app.css
@import 'highlight.js/styles/tomorrow-night-blue.css';

[x-cloak] {
    display: none;
}

:not(.answer)>pre {
    padding-left: 1rem;
    padding-right: 1rem;
}

.answer img,
.answer figure,
.answer p > a:has(img) {
    display: block;
    margin-top: 0.35rem;
}

.answer img:first-child,
.answer figure:first-child,
.answer p > a:has(img):first-child {
    margin-top: 0;
}

.hover\:darken-gradient:hover {
    filter: saturate(2.5);
}

/** See /resources/js/particles-effect.js */
particleEffect {
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0;
    pointer-events: none;
    border-radius: 50%;
}

::-webkit-scrollbar {
    height: 5px;
    width: 5px
}

::-webkit-scrollbar-track {
    @apply bg-gray-900;
}

::-webkit-scrollbar-thumb {
    @apply bg-gray-700;
}

::-webkit-scrollbar-thumb:hover {
    background: #c9cbcd
}

.dark ::-webkit-scrollbar-track {
    @apply bg-gray-800;
}

.dark ::-webkit-scrollbar-thumb {
    @apply bg-gray-600;
}

.dark ::-webkit-scrollbar-thumb:hover {
    @apply bg-gray-600;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

#link-preview-card iframe {
    width: 100%;
}

